...
            android:layout_marginTop="20dp"
            android:text="Choose Your Campus"
            android:textColor="@color/colorPrimaryDark" />


        <Button
            android:id="@+id/btn_saarbruecken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/button_border_with_color"
            android:text="Saarbrücken"
            android:textAllCaps="false"
            android:textColor="@color/viewBg"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_homburg"
...
